# PeakMessengerServer

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: common.h
libs/SQLite3/: CMakeLists.txt
src/: CMakeLists.txt  database.cpp  main.cpp
src/include/: database.h  routes.h  server.h
tests/: CMakeLists.txt  test.cpp
